--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\temp\temp\Object.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="VertexShader.glsl">
@@ -29,15 +32,18 @@
     <None Include="Fragment.glsl">
       <Filter>Source Files</Filter>
     </None>
-    <None Include="Geometry.glsl">
-      <Filter>Source Files</Filter>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bth_image.h">
       <Filter>Resource Files</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\temp\temp\datatypes.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\temp\temp\Object.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
