--- a/Demo.vcxproj
+++ b/Demo.vcxproj
@@ -81,8 +81,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\temp\temp\Object.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Object.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -90,9 +90,9 @@
     <None Include="VertexShader.glsl" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\temp\temp\datatypes.h" />
-    <ClInclude Include="..\..\temp\temp\Object.h" />
     <ClInclude Include="bth_image.h" />
+    <ClInclude Include="datatypes.h" />
+    <ClInclude Include="Object.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
