--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="Player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\temp\temp\Object.cpp">
+    <ClCompile Include="Object.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -40,10 +40,10 @@
     <ClInclude Include="Player.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\temp\temp\datatypes.h">
+    <ClInclude Include="datatypes.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\temp\temp\Object.h">
+    <ClInclude Include="Object.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
