fixa en asliten grej...

--- a/Demo.vcxproj
+++ b/Demo.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="Fragment.glsl" />
     <None Include="VertexShader.glsl" />
   </ItemGroup>
