--- a/Demo.vcxproj.filters
+++ b/Demo.vcxproj.filters
@@ -32,6 +32,7 @@
     <None Include="Fragment.glsl">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bth_image.h">
